--- a/Documentation/Content.html
+++ b/Documentation/Content.html
@@ -1,84 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <title>Content - User Guide</title>
-    <link rel="stylesheet" href="_CSS\style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="../MillimanAccessPortal/MillimanAccessPortal/src/images/map-logo-white.svg" >
-    </header>
-    <div class="body-content">
-        <h1 id="authorized-content">Content</h1>
-        <button class="accordion">
-            <p>Accessing Content</p>
-            <img 
-                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
-                class="icon"
-                >
-        </button>
-        <div class="content">
-            <ol>
-                <li>Scroll to see the desired content card under the corresponding client heading</li>
-                <li>Click on the desired content card to open the content</li>
-                <li>Note that content to be downloaded will be indicated by a button at the bottom of the card that says <strong>Download</strong></li>
-            </ol>
-        </div>
-        <button class="accordion">
-            <p>Closing Content</p>
-            <img 
-                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
-                class="icon"
-                >
-        </button>
-        <div class="content">
-            <p>Click the back button in the browser to close the document</p>
-            <p>or</p>
-            <p>Use the Navigation Bar on the left side to choose a new page</p>
-        </div>
-        <button class="accordion">
-            <p>Accessing the User Guide or Release Notes for content</p>
-            <img 
-                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
-                class="icon"
-                >
-        </button>
-        <div class="content">
-            <ol>
-                <li>Click on the button at the bottom of the desired content to view the documentation associated with that piece of content</li>
-                <li>Note that User Guide and Release Notes buttons will only appear if they are available for that content</li>
-            </ol>
-        </div>
-        <button class="accordion">
-            <p>Opening Content in a New Browser Tab</p>
-            <img 
-                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
-                class="icon"
-                >
-        </button>
-        <div class="content">
-            <ol>
-                <li>To open the main content, click on the button at the bottom of the content card that says <strong>Open in New Tab</strong></li>
-                <li>To open associated content, click the middle mouse button (scroll wheel), or right click and select <strong>Open Link in New Tab</strong> from the popup menu, while hovering over the User Guide or Release Notes buttons at the bottom of the card</li>
-            </ol>
-        </div>
-        <button class="accordion">
-            <p>Searching for Content</p>
-            <img 
-                src="../MillimanAccessPortal/MillimanAccessPortal/src/images/icons/expand-card.svg"
-                class="icon"
-                >
-        </button>
-        <div class="content">
-            <ol>
-                <li>Click on the search bar at the upper right of the page that says <strong>Filter content</strong></li>
-                <li>Begin typing to search for content item(s) with matching name</li>
-            </ol>
-        </div>
+    <div class="accordion">
+        <p>Accessing Content</p>
+        <span class="material-icons icon">expand_more</span>
     </div>
-    <script src="_JS\accordion.js"></script>
+    <div class="content">
+        <ol>
+            <li>Scroll to see the desired content card under the corresponding client heading</li>
+            <li>Click on the desired content card to open the content</li>
+            <li>Note that content to be downloaded will be indicated by a button at the bottom of the card that says <strong>Download</strong></li>
+        </ol>
+    </div>
+    <div class="accordion">
+        <p>Closing Content</p>
+        <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+        <p>Click the back button in the browser to close the document</p>
+        <p>or</p>
+        <p>Use the Navigation Bar on the left side to choose a new page</p>
+    </div>
+    <div class="accordion">
+        <p>Accessing the User Guide or Release Notes for content</p>
+        <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+        <ol>
+            <li>Click on the button at the bottom of the desired content to view the documentation associated with that piece of content</li>
+            <li>Note that User Guide and Release Notes buttons will only appear if they are available for that content</li>
+        </ol>
+    </div>
+    <div class="accordion">
+        <p>Opening Content in a New Browser Tab</p>
+        <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+        <ol>
+            <li>To open the main content, click on the button at the bottom of the content card that says <strong>Open in New Tab</strong></li>
+            <li>To open associated content, click the middle mouse button (scroll wheel), or right click and select <strong>Open Link in New Tab</strong> from the popup menu, while hovering over the User Guide or Release Notes buttons at the bottom of the card</li>
+        </ol>
+    </div>
+    <div class="accordion">
+        <p>Searching for Content</p>
+        <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+        <ol>
+            <li>Click on the search bar at the upper right of the page that says <strong>Filter content</strong></li>
+            <li>Begin typing to search for content item(s) with matching name</li>
+        </ol>
+    </div>
 </body>
 </html>
